fidoconfig 0.8
--------------

----- cvs ci ------
Sun May 16 23:26:39 CEST 1999
mtt:
+ fidoInst for new config adapted

----- cvs ci ------
Wed May 12 13:05:10 NOVST 1999
Max:
+ update documentation

----- cvs ci ------
Tue May 11 21:55:03 CEST 1999
mtt:
+ netmailarea can now also be netarea, and if you have $ in your squish area definition, 
  golded may read the fidoconfig file directly. (kolya)
	
fidoconfig 0.7
(released on Wed Apr 21 18:44:22 CEST 1999)
--------------

----- cvs ci ------
Sun Apr 25 21:37:29 CEST 1999
Antonio:
+ Fixed bug in stripComment() if comment line had more than one '#'.
  New stripComment(). Test it please!.
+ Some fixes in tparser.

----- cvs ci ------
Sun Apr 18 20:36:56 CEST 1999
Mtt:
+ fixed wrong Documentation. Please do a make next time.

----- cvs ci ------
Sun Apr 18 15:45:09 NOVST 1999
Max:
+ add separateBundles option

Fri Apr 16 21:27:53 NOVST 1999
Max:
+ update proposal.texi
     
----- cvs ci ------
Wed Apr 14 14:54:14 CEST 1999
mtt:
+ Comments are now removed from the line before the parsing. 
  If the # is between two " it is no comment. 
  Take a look at the state-machine in stripComment() if it is correct.
+ if you use a statement which specifies information about a link (ourAka,
  autocreateDefaults...) it is first tested now, if a link exists.
+ if in an area Option the string msg is recognized the area is a *.msg area.

----- cvs ci ------
Sun Apr 11 17:00
Antonio:
+ '-a' option added to fconf2golded. Export areas only.
+ fidoconfig now supports descriptions for fileareas.
+ update tparser.

----- cvs ci ------
Sat Apr  10 22:25:12
Max:
removed $f from unpack code
	
----- cvs ci ------
Tue Apr  6 18:23:17 CEST 1999	
Antonio: (applied by mtt)
+ Fidoconfig and hpt now supports descriptions for areas. See docs for
  more info and examples. fconf2golded supports too.
+ fconf2golded export localareas too. dupe and bad areas are local type now.
+ fidoconfig supports filenames with one or more spaces on it. Should be