@@ -4,15 +4,16 @@ VER = 0.8
 VERH = 0
 
 LOBJS = common$(O) dir$(O) fidoconfig$(O) line$(O) patmat$(O)
-OBJS  = $(LOBJS) $(FCONF2MSGED)$(O) $(FCONF2GOLDED)$(O) $(FCONF2AQUAED)$(O) $(FCONF2FIDOGATE)$(O)
+OBJS  = $(LOBJS) $(FCONF2MSGED)$(O) $(FCONF2GOLDED)$(O) $(FCONF2AQUAED)$(O) $(FCONF2FIDOGATE)$(O) $(FCONF2SQUISH)$(O)
 
 commonlibs: $(LIBFIDOCONFIG)$(A)
 
 commonprogs:    tparser$(EXE) \
 	        $(FCONF2MSGED)$(EXE) \
-        	$(FCONF2AQUAED)$(EXE) \
+                $(FCONF2AQUAED)$(EXE) \
 		$(FCONF2FIDOGATE)$(EXE) \
-	        $(FCONF2GOLDED)$(EXE)
+	        $(FCONF2GOLDED)$(EXE) \
+		$(FCONF2SQUISH)$(EXE)
 
 $(LIBFIDOCONFIG)$(A): $(LOBJS)
 	$(AR) $(AR_R) $(LIBFIDOCONFIG)$(A) $(LOBJS)
@@ -31,11 +32,16 @@ $(FCONF2GOLDED)$(EXE): $(FCONF2GOLDED)$(O) $(LIBFIDOCONFIG)$(A)
 $(FCONF2AQUAED)$(EXE): $(FCONF2AQUAED)$(O) $(LIBFIDOCONFIG)$(A)
 	$(CC) $(LOPT) $(FCONF2AQUAED)$(O) -o $(FCONF2AQUAED)$(EXE) \
 	  $(LINKFIDOCONFIG) $(LINKSMAPI)
-	  
+
 $(FCONF2FIDOGATE)$(EXE): $(FCONF2FIDOGATE)$(O) $(LIBFIDOCONFIG)$(A)
 	$(CC) $(LOPT) $(FCONF2FIDOGATE)$(O) -o $(FCONF2FIDOGATE)$(EXE) \
 	          $(LINKFIDOCONFIG) $(LINKSMAPI)
-		  
+
+$(FCONF2SQUISH)$(EXE): $(FCONF2SQUISH)$(O) $(LIBFIDOCONFIG)$(A)
+	$(CC) $(LOPT) $(FCONF2SQUISH)$(O) -o $(FCONF2SQUISH)$(EXE) \
+	          $(LINKFIDOCONFIG) $(LINKSMAPI)
+
+
 tparser$(EXE): tparser$(O) $(LIBFIDOCONFIG)$(A)
 	$(CC) $(LOPT) tparser$(O) -o tparser$(EXE) \
 	  $(LINKFIDOCONFIG) $(LINKSMAPI)
@@ -46,6 +52,6 @@ commonclean:
 	-$(RM) core
 
 commondistclean: clean
-	-$(RM) tparser$(EXE) $(FCONF2GOLDED)$(EXE) $(FCONF2MSGED)$(EXE) $(FCONF2AQUAED)$(EXE) $(FCONF2FIDOGATE)$(EXE)
+	-$(RM) tparser$(EXE) $(FCONF2GOLDED)$(EXE) $(FCONF2MSGED)$(EXE) $(FCONF2AQUAED)$(EXE) $(FCONF2FIDOGATE)$(EXE) $(FCONF2SQUISH)$(EXE)
 	-$(RM) $(LIBFIDOCONFIG)$(A)
 
