@@ -25,6 +25,7 @@ FCONF2AQUAED = fconf2aquaed
 FCONF2GOLDED = fconf2golded
 FCONF2MSGED  = fconf2msged
 FCONF2FIDOGATE = fconf2fidogate
+FCONF2SQUISH = fconf2squish
 LIBFIDOCONFIG = libfidoconfig
 LINKSMAPI = -lsmapidjg
 LINKFIDOCONFIG = -l$(FIDOCONFIG)
