@@ -25,6 +25,7 @@ FCONF2AQUAED = fconf2aquaed
 FCONF2GOLDED = fconf2golded
 FCONF2MSGED  = fconf2msged
 FCONF2FIDOGATE = fconf2fidogate
+FCONF2SQUISH = fconf2squish
 LIBFIDOCONFIG = libfidoconfig
 LINKSMAPI = -lsmapilnx
 LINKFIDOCONFIG = -l$(FIDOCONFIG)
@@ -52,6 +53,6 @@ install:
 	ln -sf $(LIBDIR)/libfidoconfig.so.$(VER) $(LIBDIR)/libfidoconfig.so.0
 	ln -sf $(LIBDIR)/libfidoconfig.so.0 $(LIBDIR)/libfidoconfig.so
 	ldconfig
-	install $(IBOPT) fconf2msged fconf2golded fconf2aquaed fconf2fidogate $(INSTDIR)
+	install $(IBOPT) fconf2msged fconf2golded fconf2aquaed fconf2fidogate fconf2squish $(INSTDIR)
 	install linkedto $(INSTDIR)
 	install $(IBOPT) tparser      $(INSTDIR)
